5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1644_2703.log
== TEST (2019-04-09 16:44:09) 
-- CODE:
i= int(input())
if(i>=18):
	print("eleitor")
else:
	print("nao_eleito")

-- OUTPUT:
nao_eleito
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:44:20) 
-- CODE:
i= int(input())
if(i>=18):
	print("eleitor")
else:
	print("nao_eleito")

-- EXECUTION TIME:
0.128051
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleito
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:44:33) 
-- CODE:
i= int(input())
if(i>=18):
	print("eleitor")
else:
	print("nao_eleito".lower())

-- OUTPUT:
nao_eleito
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:44:38) 
-- CODE:
i= int(input())
if(i>=18):
	print("eleitor")
else:
	print("nao_eleito".lower())

-- EXECUTION TIME:
0.15917
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleito
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:44:55) 
-- CODE:
i= int(input())
if(i>=18):
	print("eleitor")
else:
	print("nao eleito".lower())

-- OUTPUT:
nao eleito
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:44:59) 
-- CODE:
i= int(input())
if(i>=18):
	print("eleitor")
else:
	print("nao eleito".lower())

-- EXECUTION TIME:
0.135692
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao eleito
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:45:14) 
-- CODE:
i= int(input())
if(i>=18):
	print("eleitor".lower())
else:
	print("nao eleito".lower())

-- OUTPUT:
nao eleito
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:45:18) 
-- CODE:
i= int(input())
if(i>=18):
	print("eleitor".lower())
else:
	print("nao eleito".lower())

-- EXECUTION TIME:
0.223557
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao eleito
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:46:05) 
-- CODE:
i= int(input())
if(i>=18):
	print("eleitor".lower())
else:
	print("nao eleito".lower())

-- OUTPUT:
nao eleito
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:46:18) 
-- CODE:
i= int(input())
if(i>=18):
	print("eleitor".lower())
else:
	print("nao eleitor".lower())

-- OUTPUT:
nao eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:46:22) 
-- CODE:
i= int(input())
if(i>=18):
	print("eleitor".lower())
else:
	print("nao eleitor".lower())

-- EXECUTION TIME:
0.157734
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:46:51) 
-- CODE:
i= int(input())
if(i>=18):
	print("eleitor".lower())
else:
	print("nao eleitor".upper())

-- OUTPUT:
NAO ELEITOR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:47:06) 
-- CODE:
i= int(input())
if(i>=18):
	print("eleitor".lower())
else:
	print("nao eleitor".lower())

-- OUTPUT:
nao eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:47:26) 
-- CODE:
i= int(input())
if(i > =18):
	print("eleitor".lower())
else:
	print("nao eleitor".lower())

-- ERROR:
File "XXXX", line 2
    if(i > =18):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:47:35) 
-- CODE:
i= int(input())
if(i >= 18):
	print("eleitor".lower())
else:
	print("nao eleitor".lower())

-- OUTPUT:
nao eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:47:44) 
-- CODE:
i= int(input())
if(i >= 18):
	print("eleitor".lower())
else:
	print("nao_eleitor".lower())

-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:47:49) 
-- CODE:
i= int(input())
if(i >= 18):
	print("eleitor".lower())
else:
	print("nao_eleitor".lower())

-- EXECUTION TIME:
0.160081
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
